# VP-CCS-Compiler

./: README.md  ccs-value-passing-compiler.cabal  run.sh  vpccs-compiler.cabal
app/: AST.hs  Eval.hs  Main.hs  ProcessLine.hs  ProcessLines.hs  Utils.hs
app/CCS/: AExprParser.hs  BExprParser.hs  From_VP.hs  Grammars.hs  Lexer.hs  Parse.hs  Parser.hs  Parsers.hs  StatementParser.hs  Substitute.hs  Utils.hs
app/CCS/Lexer/: Lexer.hs  Utils.hs
app/CCS/Parser/: Action.hs  Grammars.hs  Parser.hs  Process.hs  Utils.hs
app/CCS_VP/: AExprParser.hs  BExprParser.hs  Eval.hs  Grammars.hs  Lexer.hs  StatementParser.hs  Utils.hs
app/Parser/: AST.hs  BExprParser.hs  Eval.hs  Lexer.hs  StatementParser.hs  Utils.hs
app/Translator/: FromVP.hs  From_VP.hs  Grammars.hs  Substitute.hs
programs/: 1-buffer.vccs  2-buffer.ccs  2-buffer.vccs  counter.ccs  counter.vccs  cs.ccs  cs.ccsv  cs.vccs  fact.ccs  fact.vccs  inc.ccs  inc.vccs  relab.ccs  relab.vccs  restrict.ccs  restrict.vccs  test.ccs  test.vccs
src/: AST.hs  Eval.hs
src/Grammars/: AST.hs  Pure_AST.hs  VP_AST.hs
src/Parser/: AExprParser.hs  AST.hs  BExprParser.hs  Lexer.hs  Parse.hs  ProcessParser.hs  StatementParser.hs  Token.hs  TokenParser.hs  Utils.hs
src/Translator/: Substitute.hs  Translate.hs
test/: SpecHelper.hs
test/Parser/: LexerSpec.hs  ProcessParserSpec.hs  StatementParserSpec.hs  TokenParserSpec.hs
