cabal-version: 3.4
name:          ccs-value-passing-compiler
version:       0.1.0.0
synopsis:
  A compiler for the Value-Passing Calculus of Communicating Systems into pure CCS.

license:       GPL-3.0-or-later
license-file:  LICENSE
author:        Nicolò Bertocco
maintainer:    nick.bertocco@gmail.com
category:      Development
build-type:    Simple

common opts
  ghc-options:        -Wall
  build-depends:
    , base  ^>=4.20.0.0 && <5.0
    , text  >=2.1.1     && <3.0

  default-language:   GHC2021
  default-extensions: OverloadedStrings

library
  import:          opts
  hs-source-dirs:  src
  exposed-modules:
    AST
    Eval
    Parser.AExprParser
    Parser.AST
    Parser.BExprParser
    Parser.StatementParser
    Parser.TokenParser
    Parser.Utils
    Translator.Substitute
    Translator.Translate

  build-depends:
    , containers          >=0.6.7   && <0.7
    , filepath            >=1.5.3.0 && <2.0
    , megaparsec          >=9.0     && <10.0
    , parser-combinators  >=1.3.0   && <2.0

executable ccs-value-passing-compiler
  import:         opts
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:  ProcessLines
  build-depends:
    , ccs-value-passing-compiler
    , deepseq                     >=1.5.0.0  && <1.6
    , filepath                    >=1.5.3.0  && <2.0
    , optparse-applicative        >=0.18.1.0 && <0.19

test-suite spec
  import:         opts
  hs-source-dirs: test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  other-modules:
    Parser.StatementParserSpec
    Parser.TokenParserSpec
    SpecHelper

  build-depends:
    , ccs-value-passing-compiler
    , containers                  >=0.6.7  && <0.7
    , hspec                       >=2.11.9 && <3.0
    , hspec-megaparsec            >=2.2.1  && <3.0
    , megaparsec                  >=9.0    && <10.0
